# 2025-KMU-industry-academic-cooperation-FL

./: .gitignore  AshwinRJ_Federated_Learning_PyTorch.ipynb  README.md
FL Testbed/fl_cifar10/: client.py  model.py  parse_config.py  run_all_experiments.py  server.py  utils.py
SCAFFOLD/: FedML.ipynb  experiment_config_from_paper.csv  requirements.txt
SCAFFOLD/data/utils/: run.py  util.py
SCAFFOLD/src/client/: base.py  fedavg.py  fedprox.py  scaffold.py
SCAFFOLD/src/config/: models.py  util.py
SCAFFOLD/src/server/: base.py  fedavg.py  fedprox.py  scaffold.py
fedmd/: README.md  debug_soft_targets.py  pyproject.toml  requirements.txt  simple_test.py
fedmd/comms/: __init__.py  fedmd_pb2.py  fedmd_pb2_grpc.py  grpc_client.py  grpc_server.py
fedmd/comms/proto/: __init__.py
fedmd/core/: aggregator.py  client.py  config.py  losses.py  private_dataset.py  public_dataset.py  server.py  trainer.py  utils.py
fedmd/models/: __init__.py  model_zoo.py
fedmd/models/backbones/: __init__.py  cnn_small.py
fedmd/scripts/: gen_proto.py  run_client.py  run_server.py  sanity_check.py
next-word-prediction-LSTM/: .gitignore  client.py  config.py  dataset.py  download_reddit_data.py  logger.py  main.py  make_train_users.py  model.py  requirements.txt  server.py
