[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedmd"
version = "0.1.0"
description = "Federated Model Distillation (FedMD) implementation"
authors = [{name = "KMU Industry-Academic Cooperation", email = "contact@kmu.ac.kr"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fedmd*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
